--- a/index.html
+++ b/index.html
@@ -5,21 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,300&display=swap" rel="stylesheet">
     <title>Iren Faraci</title>
 </head>
 <body>
-    <header>
+    <header> <!-- MENÚ -->
         <div>
             <img src="http://placekitten.com/1500/150"> <!--Acá iría el logo-->
         </div>
         <nav>
             <ul class="menu">
               <li><a href="#!">MENÚ</a></li>
-              <li><a href="#!">PORTFOLIO</a></li>
+              <li><a href="#!">PORTFOLIO</a></li> <!--AGREGAR MENU DESPLEGABLE-->
               <li><a class="contacto" href="#!">CONTACTO</a></li>
             </ul>
           </nav>
     </header>
+
+    <h2 class="bio-titulo">BIOGRAFÍA</h2>   <!--CENTRARRRRR-->
+        <div class="bio-container">
+            <p class="bio"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ex assumenda repellat iste odio sapiente consequuntur 
+                obcaecati nostrum. Expedita vero accusantium dolorem iusto nulla dignissimos tempora autem dolores, qui fugiat?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum saepe a odit odio atque perspiciatis fugit, 
+                vitae tempora natus iure ipsam minima, nihil quaerat facilis, asperiores debitis quas eius? Hic?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ea ad a dolor sed, repellendus, reiciendis 
+                illum ducimus temporibus nisi, labore distinctio neque explicabo voluptas exercitationem. Neque eaque cupiditate assumenda?
+            </p>
+            
+
+    </div>
+
+
     
 </body>
 </html>
