creación sección contacto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
         <img src="http://placekitten.com/1500/150"> <!--Acá iría el logo-->
     </div>
-    <div class="container">
+    <div class="container-fluid"> <!-- HACER RESPONSIVE - MENÚ-->
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="#" class="nav-link" style="color: #B55EBC;" aria-current="page">MENÚ</a></li>
@@ -36,13 +36,13 @@
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Retratos</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="#" class="nav-link" style="color: #B55EBC;">CONTACTO</a></li>
+                <li class="nav-item"><a href="secciones/contacto/index.html" class="nav-link" style="color: #B55EBC;">CONTACTO</a></li>
             </ul>
         </header>
     </div>
        
 
-    <h2 class="bio-titulo">BIOGRAFÍA</h2>   <!--CENTRARRRRR-->
+    <h2 class="bio-titulo">BIOGRAFÍA</h2>   
     <div class="d-flex justify-content-center">
         <div class="container"> 
             <div class="row">
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <h3 class="destacados-titulo">TRABAJOS DESTACADOS</h3>  <!--AGREGAR HOVER - MOVIMIENTO-->
+    <h3 class="destacados-titulo">TRABAJOS DESTACADOS</h3> 
         <div class="container fluid">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
@@ -126,13 +126,10 @@
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-            </a>
             <span style="color: #FFF;">&copy; 2022 Irene Faraci Fotografía</span>
           </div>
       
-          <ul class="nav col-md-4 justify-content-end d-flex">
+          <ul class="nav col-md-4 justify-content-end d-flex">  <!-- HACER RESPONSIVE - ICONOS-->
             <a class= "icono" href="#"><img src="imagenes/mail-01.svg" alt="mail" width="30"></a>
             <a class= "icono" href="#"><img src="imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
             <a class= "icono" href="#"><img src="imagenes/instagram-01.svg" alt="instagram" width="30"></a>
