se agregó detalles contacto

--- a/secciones/contacto/index.html
+++ b/secciones/contacto/index.html
@@ -49,20 +49,33 @@
 
     <br>
     <br>
-    
-
 
     <div class="d-flex justify-content-center">
         <div class="container"> 
             <div class="row">
                 <div class="col-12">
                     <p class="contacto"> 
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum necessitatibus quae nulla et assumenda, aliquid possimus officiis, minima, deserunt eligendi provident nobis laborum quos! Repellendus dicta amet suscipit eos omnis.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, distinctio quaerat dolorem voluptatum rerum iure! Recusandae error, quam ipsa in maiores odio, nam, perferendis aut commodi voluptas eligendi? Libero, repellat.
+                        Si estás interesado/a en mi trabajo, sentite libre de contactarme por donde quieras!
                     </p>
-                    <p>
-
-                    </p>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                          <img class="icono-contacto" src="../../imagenes/mail-01.svg" width="20"> irenfaraci@gmail.com</div>
+                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                          <img class="icono-contacto" src="../../imagenes/whatsapp-01.svg" width="20">+54 9 11 3573 1697</div>
+                      </div>
+                    </div>
+                    <br>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                          <img class="icono-contacto" src="../../imagenes/instagram-01.svg" width="20">@irenfaraci</div>
+                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                          <img class="icono-contacto" src="../../imagenes/linkedin-01.svg" width="20">Irene Faraci</div>
+                      </div>
+                    </div>
+                    
+  
                 </div>
             </div>
         </div>
