--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-dark">
     <!-- MENÚ -->
     <div>
-        <img src="http://placekitten.com/1500/150"> <!--Acá iría el logo-->
+        <img src="http://placekitten.com/1500/150"> <!--Acá iría el logo 1500x150-->
     </div>
     <div class="container-fluid"> <!-- HACER RESPONSIVE - MENÚ-->
         <header class="d-flex justify-content-center py-3">
@@ -27,7 +27,7 @@
                       PORTFOLIO
                     </a>
                     <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Documental</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/documental/index.html">Documental</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Eventos</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía Deportiva</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Producto</a></li>
