--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
                       <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/documental/index.html">Documental</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Eventos</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía Deportiva</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Producto</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Teatro</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotoperiodismo</a></li>
