links a iconos + headers
Se agregó headers a index, documental, deportiva y contacto

--- a/secciones/portfolio/deportiva/index.html
+++ b/secciones/portfolio/deportiva/index.html
@@ -16,7 +16,7 @@
 <body class="bg-dark">
     <!-- MENÚ -->
     <div>
-        <img src="http://placekitten.com/1500/150"> <!--Acá iría el logo-->
+        <img src="../../../imagenes/deportiva/header-deportiva.jpg" width="100%"> <!--Acá iría el logo-->
     </div>
     <div class="container">
         <header class="d-flex justify-content-center py-3">
@@ -28,12 +28,12 @@
                     </a>
                     <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
                       <li><a class="dropdown-item" style="color: #B55EBC" href="../documental/index.html">Documental</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Eventos</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="../eventos/index.html">Eventos</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="../deportiva/index.html">Fotografía Deportiva</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Producto</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Teatro</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotoperiodismo</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Retratos</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="../producto/index.html">Fotografía de Producto</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="../teatro/index.html">Fotografía de Teatro</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="../fotoperiodismo/index.html">Fotoperiodismo</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="../retratos/index.html">Retratos</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="../../contacto/index.html" class="nav-link" style="color: #B55EBC;">CONTACTO</a></li>
@@ -500,14 +500,14 @@
           </div>
       
           <ul class="nav col-md-4 justify-content-end d-flex">
-            <a class= "icono" href="#"><img src="../../../imagenes/mail-01.svg" alt="mail" width="30"></a>
-            <a class= "icono" href="#"><img src="../../../imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
-            <a class= "icono" href="#"><img src="../../../imagenes/instagram-01.svg" alt="instagram" width="30"></a>
-            <a class= "icono" href="#"><img src="../../../imagenes/linkedin-01.svg" alt="linkedin" width="30"></a>
-              
+            <a class= "icono" href="mailto:irenfaraci@gmail.com"><img src="../../../imagenes/mail-01.svg" alt="mail" width="30"></a>
+            <a class= "icono" href="https://wa.me/5491135731697" target="_blank"><img src="../../../imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
+            <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank"><img src="../../../imagenes/instagram-01.svg" alt="instagram" width="30"></a>
+            <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224" target="_blank"><img src="../../../imagenes/linkedin-01.svg" alt="linkedin" width="30"></a>      
           </ul>
+
         </footer>
-      </div>
+    </div>
 
 
 
