--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-dark">
     <!-- MENÚ -->
     <div>
-        <img src="http://placekitten.com/1500/150"> <!--Acá iría el logo 1500x150-->
+        <img src="imagenes/header-index.jpg" width="100%"> <!--Acá iría el logo 1500x150-->
     </div>
     <div class="container-fluid"> <!-- HACER RESPONSIVE - MENÚ-->
         <header class="d-flex justify-content-center py-3">
@@ -130,10 +130,10 @@
           </div>
       
           <ul class="nav col-md-4 justify-content-end d-flex">  <!-- HACER RESPONSIVE - ICONOS-->
-            <a class= "icono" href="#"><img src="imagenes/mail-01.svg" alt="mail" width="30"></a>
-            <a class= "icono" href="#"><img src="imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
-            <a class= "icono" href="#"><img src="imagenes/instagram-01.svg" alt="instagram" width="30"></a>
-            <a class= "icono" href="#"><img src="imagenes/linkedin-01.svg" alt="linkedin" width="30"></a>
+            <a class= "icono" href="mailto:irenfaraci@gmail.com"><img src="imagenes/mail-01.svg" alt="mail" width="30"></a>
+            <a class= "icono" href="https://wa.me/5491135731697" target="_blank"><img src="imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
+            <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank"><img src="imagenes/instagram-01.svg" alt="instagram" width="30"></a>
+            <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224" target="_blank"><img src="imagenes/linkedin-01.svg" alt="linkedin" width="30"></a>
               
           </ul>
         </footer>
