sección producto + marca telares

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                       <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/documental/index.html">Documental</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Eventos</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Producto</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/producto/index.html">Fotografía de Producto</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Teatro</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotoperiodismo</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Retratos</a></li>
