--- a/secciones/portfolio/producto/rolon/index.html
+++ b/secciones/portfolio/producto/rolon/index.html
@@ -36,7 +36,7 @@
                       <li><a class="dropdown-item" style="color: #B55EBC" href="../../../../secciones/portfolio/retratos/index.html">Retratos</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="../../contacto/index.html" class="nav-link" style="color: #B55EBC;">CONTACTO</a></li>
+                <li class="nav-item"><a href="../../../contacto/index.html" class="nav-link" style="color: #B55EBC;">CONTACTO</a></li>
             </ul>
         </header>
     </div>
