--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                       <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/producto/index.html">Fotografía de Producto</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotografía de Teatro</a></li>
-                      <li><a class="dropdown-item" style="color: #B55EBC" href="#">Fotoperiodismo</a></li>
+                      <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
                       <li><a class="dropdown-item" style="color: #B55EBC" href="#">Retratos</a></li>
                     </ul>
                 </li>
