--- a/secciones/portfolio/documental/index.html
+++ b/secciones/portfolio/documental/index.html
@@ -68,77 +68,77 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="../../../imagenes/documental/documental1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/TBrPVjm/documental1.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="../../../imagenes/documental/documental2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/wygnRPJ/documental2.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="../../../imagenes/documental/documental3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/BwQBwN4/documental3.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="../../../imagenes/documental/documental4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/nDRcGmF/documental4.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="../../../imagenes/documental/documental5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/j6jKWN9/documental5.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="../../../imagenes/documental/documental6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/Sc7Z9bk/documental6.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="../../../imagenes/documental/documental7.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/6PmbQxK/documental7.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="../../../imagenes/documental/documental8.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/VWRRPyH/documental8.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="../../../imagenes/documental/documental9.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/WcwD0qm/documental9.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6"> <!-- CAMBIAR TAMAÑO DE IMAGEN 10-->
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="../../../imagenes/documental/documental10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/FxVdSHL/documental10.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="../../../imagenes/documental/documental11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/5RP4T0w/documental11.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="../../../imagenes/documental/documental12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/MhB7w6c/documental12.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="../../../imagenes/documental/documental13.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/52z7HSd/documental13.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="../../../imagenes/documental/documental14.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/zm6rcyf/documental14.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="../../../imagenes/documental/documental15.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/zRyqCCM/documental15.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
   
@@ -149,7 +149,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental1.jpg">
+          <img src="https://i.ibb.co/TBrPVjm/documental1.jpg">
         </div>
       </div>
     </div>
@@ -157,7 +157,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental2.jpg">
+          <img src="https://i.ibb.co/wygnRPJ/documental2.jpg">
         </div>
       </div>
     </div>
@@ -165,7 +165,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental3.jpg">
+          <img src="https://i.ibb.co/BwQBwN4/documental3.jpg">
         </div>
       </div>
     </div>
@@ -173,7 +173,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental4.jpg">
+          <img src="https://i.ibb.co/nDRcGmF/documental4.jpg">
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental5.jpg">
+          <img src="https://i.ibb.co/j6jKWN9/documental5.jpg">
         </div>
       </div>
     </div>
@@ -189,7 +189,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental6.jpg">
+          <img src="https://i.ibb.co/Sc7Z9bk/documental6.jpg">
         </div>
       </div>
     </div>
@@ -197,7 +197,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental7.jpg">
+          <img src="https://i.ibb.co/6PmbQxK/documental7.jpg">
         </div>
       </div>
     </div>
@@ -205,7 +205,7 @@
     <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental8.jpg">
+          <img src="https://i.ibb.co/VWRRPyH/documental8.jpg">
         </div>
       </div>
     </div>
@@ -213,7 +213,7 @@
     <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental9.jpg">
+          <img src="https://i.ibb.co/WcwD0qm/documental9.jpg">
         </div>
       </div>
     </div>
@@ -221,7 +221,7 @@
     <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental10.jpg">
+          <img src="https://i.ibb.co/FxVdSHL/documental10.jpg">
         </div>
       </div>
     </div>
@@ -229,7 +229,7 @@
     <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental11.jpg">
+          <img src="https://i.ibb.co/5RP4T0w/documental11.jpg">
         </div>
       </div>
     </div>
@@ -237,7 +237,7 @@
     <div tabindex="-1" aria-labelledby="modalImage12" aria-hidden="true" class="modal fade" id="modalImage12">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental12.jpg">
+          <img src="https://i.ibb.co/MhB7w6c/documental12.jpg">
         </div>
       </div>
     </div>
@@ -245,7 +245,7 @@
     <div tabindex="-1" aria-labelledby="modalImage13" aria-hidden="true" class="modal fade" id="modalImage13">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental13.jpg">
+          <img src="https://i.ibb.co/52z7HSd/documental13.jpg">
         </div>
       </div>
     </div>
@@ -253,7 +253,7 @@
     <div tabindex="-1" aria-labelledby="modalImage14" aria-hidden="true" class="modal fade" id="modalImage14">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental14.jpg">
+          <img src="https://i.ibb.co/zm6rcyf/documental14.jpg">
         </div>
       </div>
     </div>
@@ -261,7 +261,7 @@
     <div tabindex="-1" aria-labelledby="modalImage15" aria-hidden="true" class="modal fade" id="modalImage15">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../imagenes/documental/documental15.jpg">
+          <img src="https://i.ibb.co/zRyqCCM/documental15.jpg">
         </div>
       </div>
     </div>
