cambio de src - productos

--- a/secciones/portfolio/producto/index.html
+++ b/secciones/portfolio/producto/index.html
@@ -52,7 +52,7 @@
             <div class="col">
             <div class="card">
                 <a href="rolon/index.html">
-                    <img src="../../../imagenes/producto/rolon/rolon-caratula.jpg" alt="Rolón" class="card-img-top">
+                    <img src="https://i.ibb.co/yhQb2bb/rolon-caratula.jpg" alt="Rolón" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                 <h5 class="card-title">Rolón</h5>
@@ -62,7 +62,7 @@
             <div class="col">
             <div class="card">
                 <a href="siembra/index.html">
-                    <img src="../../../imagenes/producto/siembra/siembra-caratula.jpg" alt="Siembra" class="card-img-top">
+                    <img src="https://i.ibb.co/pwMMnkH/siembra-caratula.jpg" alt="Siembra" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                 <h5 class="card-title">Siembra</h5>
@@ -72,7 +72,7 @@
             <div class="col">
             <div class="card">
                 <a href="telares/index.html">
-                    <img src="../../../imagenes/producto/telares/telares-caratula.jpg" alt="Telares Urbanos" class="card-img-top">
+                    <img src="https://i.ibb.co/4T754ct/telares-caratula.jpg" alt="Telares Urbanos" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                 <h5 class="card-title">Telares Urbanos</h5>
