--- a/secciones/portfolio/producto/telares/index.html
+++ b/secciones/portfolio/producto/telares/index.html
@@ -54,22 +54,27 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="../../../../imagenes/producto/telares/telares1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/YLLqkB8/telares1.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="../../../../imagenes/producto/telares/telares2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/kXDkR7H/telares2.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="../../../../imagenes/producto/telares/telares3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/sFMrhNc/telares3.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="../../../../imagenes/producto/telares/telares4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/Y8GMZDt/telares4.jpg" width="450px" height="300px"> </a>            
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="thumbnail img-responsive">
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/4T754ct/telares-caratula.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
     
@@ -82,7 +87,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/telares/telares1.jpg">
+          <img src="https://i.ibb.co/YLLqkB8/telares1.jpg">
         </div>
       </div>
     </div>
@@ -90,7 +95,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/telares/telares2.jpg">
+          <img src="https://i.ibb.co/kXDkR7H/telares2.jpg">
         </div>
       </div>
     </div>
@@ -98,7 +103,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/telares/telares3.jpg">
+          <img src="https://i.ibb.co/sFMrhNc/telares3.jpg">
         </div>
       </div>
     </div>
@@ -106,8 +111,15 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/telares/telares4.jpg">
+          <img src="https://i.ibb.co/Y8GMZDt/telares4.jpg">
         </div>
+      </div>
+    </div>
+
+    <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <img src="https://i.ibb.co/4T754ct/telares-caratula.jpg">
       </div>
     </div>
   
