--- a/secciones/portfolio/producto/rolon/index.html
+++ b/secciones/portfolio/producto/rolon/index.html
@@ -54,27 +54,32 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="../../../../imagenes/producto/rolon/rolon1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/yhQb2bb/rolon-caratula.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="../../../../imagenes/producto/rolon/rolon2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/pLw6rZt/rolon1.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="../../../../imagenes/producto/rolon/rolon3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/9TCfmbT/rolon2.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="../../../../imagenes/producto/rolon/rolon4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/KVR7cMJ/rolon3.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="../../../../imagenes/producto/rolon/rolon5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/WVc0MhP/rolon4.jpg" width="450px" height="300px"> </a>            
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="thumbnail img-responsive">
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/xXxMY0G/rolon5.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           
@@ -86,7 +91,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/rolon/rolon1.jpg">
+          <img src="https://i.ibb.co/yhQb2bb/rolon-caratula.jpg">
         </div>
       </div>
     </div>
@@ -94,7 +99,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/rolon/rolon2.jpg">
+          <img src="https://i.ibb.co/pLw6rZt/rolon1.jpg">
         </div>
       </div>
     </div>
@@ -102,7 +107,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/rolon/rolon3.jpg">
+          <img src="https://i.ibb.co/9TCfmbT/rolon2.jpg">
         </div>
       </div>
     </div>
@@ -110,7 +115,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/rolon/rolon4.jpg">
+          <img src="https://i.ibb.co/KVR7cMJ/rolon3.jpg">
         </div>
       </div>
     </div>
@@ -118,11 +123,18 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="../../../../imagenes/producto/rolon/rolon5.jpg">
+          <img src="https://i.ibb.co/WVc0MhP/rolon4.jpg">
         </div>
       </div>
     </div>
   
+    <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <img src="https://i.ibb.co/xXxMY0G/rolon5.jpg">
+        </div>
+      </div>
+    </div>
     
     <br>
     <br>
