--- a/secciones/portfolio/retratos/index.html
+++ b/secciones/portfolio/retratos/index.html
@@ -51,8 +51,8 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
             <div class="card">
-                <a href="rolon/index.html">
-                    <img src="../../../imagenes/producto/rolon/rolon-caratula.jpg" alt="Rolón" class="card-img-top">
+                <a href="autorretratos/index.html">
+                    <img src="https://i.ibb.co/wCmK6Vr/autorretrato-caratula.jpg" alt="Autorretrato" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                 <h5 class="card-title">Autorretrato</h5>
@@ -61,8 +61,8 @@
             </div>
             <div class="col">
             <div class="card">
-                <a href="siembra/index.html">
-                    <img src="../../../imagenes/producto/siembra/siembra-caratula.jpg" alt="Siembra" class="card-img-top">
+                <a href="mascotas/index.html">
+                    <img src="https://i.ibb.co/37GdXtD/CARATULA-GALERIA-DSC-0769.jpg" alt="Mascotas" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                 <h5 class="card-title">Mis mascotas</h5>
@@ -71,8 +71,8 @@
             </div>
             <div class="col">
             <div class="card">
-                <a href="telares/index.html">
-                    <img src="../../../imagenes/producto/telares/telares-caratula.jpg" alt="Telares Urbanos" class="card-img-top">
+                <a href="retratos/index.html">
+                    <img src="https://i.ibb.co/88b26pZ/CARATULA-GALERIA-IPH-8673.jpg" alt="Retratos" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                 <h5 class="card-title">Retratos</h5>
@@ -81,8 +81,8 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <a href="telares/index.html">
-                        <img src="../../../imagenes/producto/telares/telares-caratula.jpg" alt="Telares Urbanos" class="card-img-top">
+                    <a href="sayiylucila/index.html">
+                        <img src="https://i.ibb.co/thq2WCZ/CARATULA-GALERIA-IPH-0213.jpg" alt="Sayi y Lucila" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                     <h5 class="card-title">Sayi y Lucila</h5>
